force-app/main/default/objects/Account/fields/ABDM_Registration__c.field-meta.xml
<CustomField>
    <fullName>ABDM_Registration__c</fullName>
    <description>ABDM (Ayushman Bharat Digital Mission) Health Facility Registry registration number. Populated from the ABDM HFR API for Indian healthcare facilities (FR-FI-005).</description>
    <inlineHelpText>Official ABDM registration number for Indian facilities.</inlineHelpText>
    <label>ABDM Registration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>