force-app/main/default/objects/Account/fields/Annual_Patient_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Patient_Volume__c</fullName>
    <description>Estimated number of oncology patients seen by this facility per year.</description>
    <label>Annual Patient Volume</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>