force-app/main/default/objects/Account/fields/Best_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Best_Visit_Time__c</fullName>
    <description>Best day and time window to visit this facility, derived from Google Popular Times data. e.g. &quot;Tuesday 10am–12pm (least busy)&quot;. Populated automatically during Google Places enrichment.</description>
    <inlineHelpText>Auto-populated from Google Popular Times during facility enrichment.</inlineHelpText>
    <label>Best Visit Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>