force-app/main/default/objects/Account/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hospital</fullName><default>false</default><label>Hospital</label></value>
            <value><fullName>Cancer Centre</fullName><default>false</default><label>Cancer Centre</label></value>
            <value><fullName>Clinic</fullName><default>true</default><label>Clinic</label></value>
            <value><fullName>Private Practice</fullName><default>false</default><label>Private Practice</label></value>
            <value><fullName>Diagnostic Centre</fullName><default>false</default><label>Diagnostic Centre</label></value>
            <value><fullName>Pharmacy</fullName><default>false</default><label>Pharmacy</label></value>
            <value><fullName>Research Institute</fullName><default>false</default><label>Research Institute</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>