force-app/main/default/objects/Account/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>GPS coordinates of the healthcare facility, populated from ABDM HFR or Google Places.</description>
    <label>Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>