force-app/main/default/objects/Account/fields/Google_Place_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Place_ID__c</fullName>
    <description>Google Places API unique identifier for this facility. Used by the Enrich from Google feature to prevent duplicate enrichment.</description>
    <externalId>true</externalId>
    <label>Google Place ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>