force-app/main/default/objects/Account/fields/HFR_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>HFR_Facility_ID__c</fullName>
    <externalId>true</externalId>
    <label>HFR Facility ID</label>
    <length>12</length>
    <type>Text</type>
    <description>ABDM Health Facility Registry unique ID. 12-character string starting with IN (e.g. IN27XXXXXXXX21).</description>
</CustomField>