force-app/main/default/objects/Account/fields/HFR_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>HFR_Facility_Type__c</fullName>
    <description>Facility type as returned by ABDM HFR (e.g. Hospital, Medical College, Diagnostic Laboratory, Imaging Center).</description>
    <label>HFR Facility Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>