force-app/main/default/objects/Account/fields/HFR_Verified__c.field-meta.xml
<CustomField>
    <fullName>HFR_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this facility has been verified and enriched from the ABDM Health Facility Registry.</description>
    <label>HFR Verified</label>
    <type>Checkbox</type>
</CustomField>