force-app/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag this account as a Key Account requiring priority visits and dedicated relationship management.</description>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>