force-app/main/default/objects/Account/fields/Last_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Last_Enriched__c</fullName>
    <description>Timestamp of the last successful Google Places enrichment for this facility. Used to enforce the 24-hour cooldown between enrichment calls (BR-009).</description>
    <inlineHelpText>Set automatically when facility is enriched from Google Places.</inlineHelpText>
    <label>Last Enriched</label>
    <type>DateTime</type>
</CustomField>