force-app/main/default/objects/Account/fields/Last_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Date__c</fullName>
    <description>Date of the most recent visit report for this account. Updated automatically by Agentforce when a new visit is logged.</description>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>