force-app/main/default/objects/Account/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <description>National Provider Identifier — unique 10-digit ID assigned to healthcare providers.</description>
    <label>NPI Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>