force-app/main/default/objects/Account/fields/Preferred_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Visit_Time__c</fullName>
    <label>Preferred Visit Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Morning (9am - 12pm)</fullName><default>false</default><label>Morning (9am - 12pm)</label></value>
            <value><fullName>Afternoon (12pm - 3pm)</fullName><default>false</default><label>Afternoon (12pm - 3pm)</label></value>
            <value><fullName>Evening (3pm - 6pm)</fullName><default>false</default><label>Evening (3pm - 6pm)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>