force-app/main/default/objects/Account/fields/Relationship_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score__c</fullName>
    <description>Physician relationship health score (0-100). Calculated by Data Cloud or Agentforce based on visit frequency, outcomes, and engagement.</description>
    <inlineHelpText>0 = No relationship. 100 = Champion prescriber.</inlineHelpText>
    <label>Relationship Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>