force-app/main/default/objects/Account/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Oncology</fullName><default>false</default><label>Oncology</label></value>
            <value><fullName>Haematology</fullName><default>false</default><label>Haematology</label></value>
            <value><fullName>Surgical Oncology</fullName><default>false</default><label>Surgical Oncology</label></value>
            <value><fullName>Radiation Oncology</fullName><default>false</default><label>Radiation Oncology</label></value>
            <value><fullName>Cardiology</fullName><default>false</default><label>Cardiology</label></value>
            <value><fullName>Neurology</fullName><default>false</default><label>Neurology</label></value>
            <value><fullName>General Medicine</fullName><default>false</default><label>General Medicine</label></value>
            <value><fullName>Pathology</fullName><default>false</default><label>Pathology</label></value>
            <value><fullName>Radiology</fullName><default>false</default><label>Radiology</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>