force-app/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Sales territory this account belongs to (e.g. Mumbai North, Delhi Central).</description>
    <label>Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>