force-app/main/default/objects/Account/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <description>Total expenses logged across all visit reports for this account. For Individual Prescribers: sum of direct visit expenses. For Healthcare Facilities: sum of all visits at this facility via Hospital__c. Updated by VisitReportTriggerHandler.</description>
    <inlineHelpText>Total Rs. in visit expenses. Read-only — updated automatically.</inlineHelpText>
    <label>Total Expenses (Rs.)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>