force-app/main/default/objects/Account/fields/Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits__c</fullName>
    <description>Total number of visit reports logged for this account. Updated by Apex on each visit creation.</description>
    <label>Total Visits</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>