force-app/main/default/objects/Account/recordTypes/Healthcare_Facility.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Facility</fullName>
    <active>true</active>
    <description>Hospitals, cancer centres, clinics, and diagnostic facilities visited by Onco Global sales reps.</description>
    <label>Healthcare Facility</label>
</RecordType>