force-app/main/default/objects/Account/recordTypes/Physician.recordType-meta.xml
<RecordType>
    <fullName>Physician</fullName>
    <active>true</active>
    <description>Individual physicians and medical professionals (Person Account). Used for Dr. Priya Mehta, Dr. Arun Sharma etc.</description>
    <label>Physician</label>
</RecordType>